--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* body */
 body {
-  padding-top: 60px;
+  padding-top: 70px;
 }
 
 /* container */
@@ -11,8 +11,7 @@ body {
 
 /* navigation */
 #navbar {
-  background-color: #1abc9c;
-  border-bottom: 1px solid #1a6e5d;
+  background-color: #2c3e50;
 }
 
 .navbar .navbar-brand,
@@ -69,4 +68,11 @@ body {
   padding-top: calc(2 / 3 * 100%);
   background-size: cover;
   background-position: bottom;
+}
+
+/* about section */
+.about-text {
+  font-size: 1.1rem;
+  text-align: justify;
+  text-justify: inter-word;
 }
