--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .navbar .navbar-brand:hover,
 #navbarSupportedContent .navbar-nav a:hover {
-  color: black;
+  color: #1abc9c;
   font-weight: 600;
 }
 
@@ -75,4 +75,22 @@ body {
   font-size: 1.1rem;
   text-align: justify;
   text-justify: inter-word;
+}
+
+/* footer section */
+footer {
+  background-color: #2c3e50;
+}
+
+.contact-header {
+  color: white;
+}
+
+.contact-links a {
+  color: white;
+  font-size: 6rem;
+}
+
+.contact-links a:hover {
+  color: #1abc9c;
 }
