--- a/style.css
+++ b/style.css
@@ -67,7 +67,21 @@ body {
 .aspectRatioBox {
   padding-top: calc(2 / 3 * 100%);
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
+}
+
+.overlay {
+  opacity: 0;
+  top: 0;
+  font-size: 5rem;
+  background-color: rgba(255, 255, 255, 0);
+  transition: background-color 0.5s;
+}
+
+.overlay:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+  opacity: 1;
+  color: #1abc9c;
 }
 
 /* about section */
